--- a/Unit 5/Unit_5.ipynb
+++ b/Unit 5/Unit_5.ipynb
@@ -84,7 +84,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
+   "id": "8c593a53-6db1-4f7f-b9f4-a2c07160f66c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Enter path to known person image (e.g., known.jpg):  /Users/prii/Desktop/Priya.jpg\n",
+      "Enter path to unknown person image (e.g., unknown.jpg):  /Users/prii/Desktop/kavya.jpg\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same person: False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import face_recognition\n",
+    "\n",
+    "# Get image paths from user\n",
+    "known_image_path = input(\"Enter path to known person image (e.g., known.jpg): \")\n",
+    "unknown_image_path = input(\"Enter path to unknown person image (e.g., unknown.jpg): \")\n",
+    "\n",
+    "# Load images\n",
+    "known_image = face_recognition.load_image_file(known_image_path)\n",
+    "unknown_image = face_recognition.load_image_file(unknown_image_path)\n",
+    "\n",
+    "# Encode faces\n",
+    "try:\n",
+    "    known_encoding = face_recognition.face_encodings(known_image)[0]\n",
+    "    unknown_encoding = face_recognition.face_encodings(unknown_image)[0]\n",
+    "\n",
+    "    # Compare faces\n",
+    "    results = face_recognition.compare_faces([known_encoding], unknown_encoding)\n",
+    "    print(\"Same person:\", results[0])\n",
+    "except IndexError:\n",
+    "    print(\"No face detected in one or both images\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "38aac05c-c2ed-4aba-a368-d60651bd7b6c",
    "metadata": {},
    "outputs": [
@@ -92,14 +137,14 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter email text:  Discount coupon\n"
+      "Enter email text:  Free free\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction: ham\n"
+      "Prediction: spam\n"
      ]
     }
    ],
@@ -110,7 +155,7 @@
     "\n",
     "# Sample training data\n",
     "texts = ['win free money', 'meeting tomorrow', 'buy cheap pills', 'project update']\n",
-    "labels = ['spam', 'ham', 'spam', 'ham']\n",
+    "labels = ['spam', 'not spam', 'spam', 'not spam']\n",
     "\n",
     "# Train model\n",
     "model = make_pipeline(TfidfVectorizer(), MultinomialNB())\n",
